[package]
name = "rocketlauncher"
version = "0.1.0"
authors = ["Martin <morez.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json", "helmet", "templates", "tera_templates", "serve"] }
rocket_csrf = "0.3.0"
email-address-parser = "1.0.0"
pwhash = "1"
sled = "0.34.6"
sled-extensions = { version = "0.2.0", features = ["json"]}
nanoid = "0.3.0"
rocket_cors = "0.5.1"

[lib]
name = "rocket_crud"
path = "src/lib.rs"

[[bin]]
name = "rocketlauncher"
path = "src/main.rs"
